Creating unit tests for the web server and Java classes.